	* removed extension fields for fegroups
	* changed the createGroup application to use the new dedicated table for groups
	* fixed bug in birthday list, the list should always show the birthdays of the requested user's friends
	* added the my groups widget
	* refactored the group gateway
	* moved the include for the localization manager into the community application controller

2008-09-30 Ingo Renner  <ingo@typo3.org>

	* Fixed profile action links in the profile actions widget
	* Added a status field for friend relations
	* Changed the way friend relations are handled, now both users must be friends with the other
	* Added a method to the abstract community application controller to get an instance of the user gateway
	* Added an abstract view and changed all views to use this new abstract view
	* Added a new section in the TS configuration for common settings, for now contains a setting how dates should be rendered
	* Added getter and setter for the birthday property in the user model
	* Added a date viewhelper, that turns unix timestamps into human readable dates
	* Added the user profile friend birthday list widget

2008-09-30 Frank Naegler  <typo3@naegler.net>

	* adding GroupInformationWidget
	* added community logger to tx_community_Template
	* added draggable and removeable to the image widget

2008-09-29 Ingo Renner  <ingo@typo3.org>

	* !!! changed the way the configuration for community applications is build, their names now start with lower case letters like anything else, too
	* made the profile image rendering configurable through TS
	* The application manager now returns initialized applications
	* added a dispatching mechanism to the abstract community application controller, it executes in the following priorities: widget, specific action, default action
	* renamed the widgets' getId() method into getName() to make it more consistent with the according community application method