@@ -12,6 +12,7 @@
 	* added the my groups widget
 	* refactored the group gateway
 	* moved the include for the localization manager into the community application controller
+	* added a TS viewhelper to retrieve TS values
 
 2008-09-30 Ingo Renner  <ingo@typo3.org>
 
